# lum

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE.md  Makefile  MakefileLegacy  README.md  compile_flags.txt  info.txt  khash.hpp  temp.cpp  vcpkg.json
.github/workflows/: c-cpp.yml  cmake-linux-clang.yml  cmake-linux-gcc.yml  cmake-windows-mingw.yml
assets/: MechaGolem.vox  Room_1.vox  bark.vox  black_block.vox  bush.vox  dirt.vox  doc.rml  grass.vox  grassNdirt.vox  iron.vox  lamp.vox  leaves.vox  light.vox  metal.vox  mirror.vox  monu2.vox  planks.vox  robot.vox  scene  scene.vox  simple.rcss  simple.rml  stone_brick.vox  stone_brick_cracked.vox  stone_dirt.vox  stone_pack.vox  styles.rcss  tank.vox  tank_body.vox  tank_head.vox  tank_lf_rb_leg.vox  tank_rf_lb_leg.vox  white_block.vox  window.rml  wood.vox
assets/MechGolem/Package/: MechaGolem.mtl  MechaGolem.vox
cmake/: LumConfig.cmake  LumConfig.cmake.in  LumConfigVersion.cmake
common/: defines.hpp  forthys.cpp  khash.hpp  meshopt.cpp  meshopt.hpp  ogt_vox.cpp  ogt_vox.h  ogt_vox.hpp  ogt_voxel_meshify.cpp  ogt_voxel_meshify.hpp  print.h  vk_enum_string_helper.h
examples/: CMakeLists.txt  README.md  cdemo.c  cdemo_api_impl.cpp  demo.cpp
include/: clum.h  lum.hpp
shaders/: accumulate.comp  ao.frag  ao.vert  ao_direct.frag  ao_lut.frag  ao_old.frag  blockify.comp  blur.frag  comp.comp  comp2.comp  compopt.comp  conetrace.comp  copy.comp  denoise.comp  df.comp  dfx.comp  dfy.comp  dfz.comp  diffuse.comp  diffuse.frag  diffuse.vert  doLight.comp  fillStencilGlossy.frag  fillStencilSmoke.frag  fillStencilSmoke.vert  frag.frag  glossy.comp  glossy.frag  glossy.vert  glossy_old.frag  grass.frag  grass.vert  hbao.frag  lightmap.vert  lightmapBlocks.vert  lightmapModels.vert  map.comp  map2.comp  overlay.frag  overlay.vert  (+29 more)
shaders/common/: consts.glsl  ext.glsl  ubo.glsl
shaders/compiled/: comp.spvasm
shaders/templates/: FOLIAGE.vert
shaders/unused/: accumulate.comp  ao_direct.frag  bitmask.comp  comp3.comp  conetrace.comp  denoise.comp  dfy.comp  dfz.comp  doLight_full copy.comp  glossy_sssr.comp  grass_tlist.vert  map_m2w.comp  mipmap.comp  raytrace.comp  updateRadianceCache_full.comp
src/: cdemo.c  clum.cpp  defines.hpp  demo.cpp  demo_modern.cpp  engine.cpp  engine.hpp  lum.cpp  lum_c.cpp  lum_c.h  lum_modern.cpp  lum_modern.hpp  main.c  main.cpp  unity.cpp
src/API/normal/: demo.cpp  engine.cpp  engine.hpp  lum.cpp  lum.hpp
src/containers/: ankerl_unordered_dense.hpp  arena.hpp  fixed_map.hpp  promised_storage.hpp  promised_storage_accessor.hpp  shared_vector.hpp  size_predictor.hpp
src/containers/safe_types/: README.md  main.cpp  safe_base.hpp  safe_float.hpp  safe_int.hpp
src/containers/thread_pool/: thread_pool.hpp  thread_safe_queue.hpp
src/engine/: README.md  ecs.hpp  engine.hpp  profiler.hpp
src/engine/examples/: ecs_bench.cpp  ecs_example.cpp  engine_example.cpp
src/engine/parallel/: example_parallel.cpp  parallel.hpp  thread_pool.hpp
src/examples/: cdemo.c  demo.cpp
src/input/: README.md  input.hpp  inputHandler.hpp
src/macros/: assert.hpp
src/renderer/: README.md  ao_lut.cpp  ao_lut.hpp  load_stuff.cpp  primitives.hpp  r.cpp  render.c  render.cpp  render.h  render.hpp  render_ui_interface.cpp  setup.cpp  temp.cpp  ui.cpp  ui.hpp  visible_world.cpp  visible_world.hpp  window.c  window.cpp  window.h  window.hpp
src/renderer/api/: crenderer.cpp  crenderer.h  opaque_renderer_members.hpp  renderer.cpp  renderer.hpp
src/renderer/src/: ao_lut.cpp  ao_lut.hpp  internal_render.cpp  internal_render.hpp  internal_types.hpp  load_stuff.cpp  render_ui_interface.cpp  setup.cpp  ui.cpp  ui.hpp
src/unity/: README.md  unity_c_demo.cpp  unity_c_lib.cpp  unity_demo.cpp  unity_lib.cpp
tests/: CMakeLists.txt  README.md  main.cpp
